# model-router

./: .env.example  .gitignore  README.md  docker-compose.yml
analysis/: plots.ipynb
dashboard/: Dockerfile  next.config.ts  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/stats/: route.ts
dashboard/components/: CostByFeatureChart.tsx  LatencyChart.tsx  ModelBreakdownChart.tsx  RoutingAccuracyChart.tsx  SavingsWidget.tsx
experiments/: DATASET_DECISIONS.md  eval_classifier.py  generate_dataset.py  pyproject.toml  run_eval.py  train_classifier.py
experiments/datasets/: prompts.json
gateway/: Dockerfile  main.py  pyproject.toml  schemas.py
gateway/api/v1/: chat.py  stats.py
gateway/classifier/: dispatch.py  features.py  model.py
gateway/classifier/training/: train.py
gateway/db/: session.py
gateway/db/migrations/: 001_initial.sql  002_add_classifier.sql
gateway/providers/: anthropic.py  base.py  mock.py  openai.py
gateway/router/: policy.py
gateway/telemetry/: collector.py
gateway/tests/: conftest.py
gateway/tests/integration/: test_chat.py
gateway/tests/unit/: test_features.py  test_model.py
policies/: default_policy.yaml  mock_policy.yaml  real_policy.yaml
scripts/: backup_real.sh
specs/: API.md  ARCHITECTURE.md  CLASSIFIER.md  DATA_MODEL.md  DEPLOYMENT.md  PRD.md  PROVIDERS.md  ROUTING.md  SECURITY.md  TELEMETRY.md  TESTING.md  openapi.yaml
specs/adr/: 001-openai-compatible-schema.md  002-heuristic-classifier-first.md  003-yaml-policy-not-db.md  004-timescaledb.md
