[project]
name = "model-router-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",           # for TestClient
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
where = [".."]
include = ["gateway*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".."]
markers = ["e2e: marks tests as end-to-end (deselect with '-m not e2e')"]

[tool.ruff.lint]
select = ["E", "F", "I"]
